syntax = "proto3";
package api;
option go_package="gitee.com/zekeGitee_admin/tx_gdut_monitor/monitor-alert/internal/send/api/sendpb;sendpb";


service SendService {
  // 负责更新和新增
  rpc Set(UpdateRequest) returns (Response);
  rpc Del(DelRequest) returns (Response);
  rpc Init(InitRequest) returns (Response);
}


enum Type{
  EMAIL = 0;
  KAFKA = 1;
  NSQ = 2;
  HTTP_LOG = 3;
}
// 发送配置，包括配置类型，配置内容及配置等级
message Config{
  Type SendType = 1;
  string Config = 2;
  int32 Level = 3;
}

message ConfigEntry {
  int32 ConfigID = 1;
  Config Conf = 2;
}

message InitConfig{
  string IP = 1; // ip和local组成agent的唯一标识
  string Local = 2;
  repeated ConfigEntry Config = 3;
}

message UpdateRequest{
  string IP = 1; // ip和local组成agent的唯一标识
  string Local = 2;
  ConfigEntry config = 3;
}
message DelRequest{
  string IP = 1; // ip和local组成agent的唯一标识
  string Local = 2;
  int32 ConfigID = 3;
}

// 以agentID为键值，返回配置列表
message InitRequest{
  map<string, InitConfig> Config = 1;
}



message Response {
  ResponseCode Code = 1;
  string Msg = 2;
}
enum ResponseCode {
  SUCCESS = 0;
  ERROR = 1;
}